# clang-tidy-visualizer

./: .gitignore  .vscodeignore  CHANGELOG.md  README.i18n.md  README.md  TODO.MD  generate_icon.py  package-lock.json  package.json  package.nls.json  package.nls.zh-cn.json  project_rules.md  tsconfig.json
src/: extension.ts
src/core/config/: ConfigManager.ts
src/core/parser/: JsonParser.ts  TextParser.ts
src/core/reporter/: ChartGenerator.ts  HtmlReporter.ts
src/core/runner/: ClangTidyRunner.ts
src/types/: index.ts
src/ui/webview/: ReportWebview.ts
src/utils/: fileUtils.ts  i18nService.ts  logger.ts  processUtils.ts
test/: .clang-tidy  CMakeLists.txt  caret-debug.js  compile_commands.json  debug-parser.js  debug-test.js  extension-integration-test.js  parser-test.ts  setup.py  simple-debug.js  simple-test.js  test.cpp  textparser-verify.js
test/suite/: extension.test.js  extension.test.js.map  extension.test.ts
test/test_cases/: CMakeLists.txt  README.md  test_basic.cpp  test_bugprone.cpp  test_google_style.cpp  test_misc.cpp  test_modernize.cpp  test_performance.cpp  test_readability.cpp
